--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
-    <string name="app_name">Android-ffmpeg-CameraRecord</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="app_name">FilterVideoCamera</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
